--- a/sekamarTailwind/index.html
+++ b/sekamarTailwind/index.html
@@ -31,8 +31,8 @@
                     class="w-[10vw] md:w-[10vw]" href=' /index.html' />
             </a>
         </div>
-
-        <div class="flex">
+        <!-- 
+        <!-- <div class="flex">
             <div class="dropdown pl-[60vw]">
                 <button onclick="myFunction()" class="dropbtn">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -54,7 +54,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> --> -->
     </header>
 
     <!-- body -->
