--- a/product.html
+++ b/product.html
@@ -86,8 +86,7 @@
                     <!--radio buttons end-->
                     <!--slide images start-->
                     <div class="slide first">
-                        <img src="https://images.unsplash.com/photo-1654041562611-c15e8df579b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxN3x8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                        <img src="https://drive.google.com/file/d/1D3ytRJZ3JBGZoc-0qlpAdUKEzgUoAUKY/preview" alt="">
                     </div>
                     <div class="slide">
                         <img src="https://images.unsplash.com/photo-1621785588441-fe54efc70364?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
@@ -135,14 +134,13 @@
 
             <div class='flex flex-col pl-5 flex-grow'>
                 <div class="flex items-center">
-                    <h4 class='text-xl font-semi-bold'>#001</h4>
                     <div
-                        class="flex items-center justify-center ml-3 border-2 rounded-full px-2 hover:shadow-md cursor-default">
-                        <img src="https://img.icons8.com/glyph-neue/512/35abff/men-age-group-4.png"
-                            class="h-10 -ml-2" />
+                        class="flex items-center justify-center border-2 rounded-full px-2 hover:shadow-md cursor-default">
+                        <!-- <img src="https://img.icons8.com/glyph-neue/512/35abff/men-age-group-4.png"
+                            class="h-10 -ml-2" /> -->
                         <img src="https://img.icons8.com/glyph-neue/512/ffa4b4/standing-woman.png"
                             class="h-10 -ml-3 text-pink" />
-                        <h4 class="text-xl font-semibold">Campur</h4>
+                        <h4 class="text-xl font-semibold">Putri</h4>
                     </div>
                     <div
                         class="flex items-center justify-center ml-3 border-2 rounded-full px-2 hover:shadow-md cursor-default">
@@ -154,29 +152,64 @@
                     </div>
                 </div>
 
-                <div class='flex flex-col justify-between border-b-2'>
-                    <h2 class="font-bold text-3xl ">Nama Kos</h2>
-                    <p class='text-sm text-[#ababab] pb-2'>{lokasi}</p>
+                <div class='flex flex-col justify-between border-b-2 border-b-[#faf9f9]'>
+                    <h4 class='text-md font-semi-bold'>#001</h4>
+                    <h2 class="font-bold text-2xl ">Kos-Kosan N3</h2>
+                    <div class="flex">
+                        <img src="https://img.icons8.com/glyph-neue/512/undefined/marker.png"
+                            class="h-5 text-[#ababab] " />
+                        <p class='text-sm text-[#ababab] pb-2'>Dago-Coblong</p>
+                    </div>
                 </div>
-                <div class="grid grid-cols-3 grid-rows-3 gap-1 text-sm max-w-[580px] mt-1">
-                    <p>Kamar Mandi Dalam</p>
-                    <p>Parkiran Motor</p>
-                    <p>Ruang Bersama</p>
-                    <p>1</p>
-                    <p>1</p>
-                    <p>1</p>
-                    <p>1</p>
 
-
+                <div class="flex flex-row pb-2 pt-2 border-b-2 border-b-[#faf9f9]">
+                    <div class="flex flex-col">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Tipe Bangunan</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/cottage.png" class="h-7 mr-2" />
+                            <p>Rumah</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Lantai</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/wakeup-hill-on-stairs.png"
+                                class="h-7 mr-2" />
+                            <p>2</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Unit</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/room.png" class="h-7 mr-2" />
+                            <p>4</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="absolute mt-[150px] ml-[530px]">
-                    <p class="text-sm font-light -mb-3">Rp</p>
+
+                <div class="pt-2">
+                    <h1 class="text-lg font-semibold text-[#ababab] ">Fasilitas</h1>
+                    <div class="grid grid-cols-2 grid-rows-3 gap-1 text-sm max-w-[580px] mt-1">
+                        <p class="text-sm ">Kamar Mandi Dalam</p>
+                        <p class="text-sm ">Parkiran Motor</p>
+                        <p class="text-sm ">Ruang Bersama</p>
+                        <p class="text-sm ">1</p>
+                        <p class="text-sm ">1</p>
+                        <a href="#">Liat Lebih Banyak</a>
+                    </div>
+                </div>
+                <div class="absolute mt-[230px] ml-[530px]">
+                    <p class="text-sm font-light -mb-3">dari</p>
                     <div class="flex flex-row">
                         <p class='text-lg font-semibold lg:text-xl pl-5'>500.000
                         <p class=' font-extralight mt-4'>
                             /bulan</p>
                         </p>
                     </div>
+
+
+
+
                     <div
                         class="border-2 mt-1 flex items-center justify-center py-2 rounded-full hover:shadow-md active:transform active:scale-75 active:ease-in-out active:duration-100 ">
                         <a href="#">
@@ -256,9 +289,9 @@
 
             <div class='flex flex-col pl-5 flex-grow'>
                 <div class="flex items-center">
-                    <h4 class='text-xl font-semi-bold'>#001</h4>
+
                     <div
-                        class="flex items-center justify-center ml-3 border-2 rounded-full px-2 hover:shadow-md cursor-default">
+                        class="flex items-center justify-center border-2 rounded-full px-2 hover:shadow-md cursor-default">
                         <img src="https://img.icons8.com/glyph-neue/512/35abff/men-age-group-4.png"
                             class="h-10 -ml-2" />
                         <img src="https://img.icons8.com/glyph-neue/512/ffa4b4/standing-woman.png"
@@ -276,22 +309,49 @@
                 </div>
 
                 <div class='flex flex-col justify-between border-b-2'>
-                    <h2 class="font-bold text-3xl ">Nama Kos</h2>
+                    <h4 class='text-md font-semi-bold'>#001</h4>
+                    <h2 class="font-bold text-2xl ">Nama Kos</h2>
                     <p class='text-sm text-[#ababab] pb-2'>{lokasi}</p>
                 </div>
-                <div class="grid grid-cols-3 grid-rows-3 gap-1 text-sm max-w-[580px] mt-1">
-                    <p>Kamar Mandi Dalam</p>
-                    <p>Parkiran Motor</p>
-                    <p>Ruang Bersama</p>
-                    <p>1</p>
-                    <p>1</p>
-                    <p>1</p>
-                    <p>1</p>
 
-
+                <div class="flex flex-row pb-2">
+                    <div class="flex flex-col">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Tipe Bangunan</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/cottage.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Lantai</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/wakeup-hill-on-stairs.png"
+                                class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Unit</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/room.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="absolute mt-[150px] ml-[530px]">
-                    <p class="text-sm font-light -mb-3">Rp</p>
+
+                <div>
+                    <h1 class="text-lg font-semibold text-[#ababab] ">Fasilitas</h1>
+                    <div class="grid grid-cols-2 grid-rows-3 gap-1 text-sm max-w-[580px] mt-1">
+                        <p>Kamar Mandi Dalam</p>
+                        <p>Parkiran Motor</p>
+                        <p>Ruang Bersama</p>
+                        <p>1</p>
+                        <p>1</p>
+                        <a href="#">Liat Lebih Banyak</a>
+                    </div>
+                </div>
+                <div class="absolute mt-[230px] ml-[530px]">
+                    <p class="text-sm font-light -mb-3">dari</p>
                     <div class="flex flex-row">
                         <p class='text-lg font-semibold lg:text-xl pl-5'>500.000
                         <p class=' font-extralight mt-4'>
@@ -399,6 +459,31 @@
                     <h2 class="font-bold text-3xl ">Nama Kos</h2>
                     <p class='text-sm text-[#ababab] pb-2'>{lokasi}</p>
                 </div>
+
+                <div class="flex flex-row pb-2">
+                    <div class="flex flex-col">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Tipe Bangunan</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/building.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Lantai</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/building.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Unit</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/building.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="grid grid-cols-3 grid-rows-3 gap-1 text-sm max-w-[580px] mt-1">
                     <p>Kamar Mandi Dalam</p>
                     <p>Parkiran Motor</p>
@@ -411,7 +496,7 @@
 
                 </div>
                 <div class="absolute mt-[150px] ml-[530px]">
-                    <p class="text-sm font-light -mb-3">Rp</p>
+                    <p class="text-sm font-light -mb-3">dari</p>
                     <div class="flex flex-row">
                         <p class='text-lg font-semibold lg:text-xl pl-5'>500.000
                         <p class=' font-extralight mt-4'>
@@ -520,19 +605,43 @@
                     <h2 class="font-bold text-3xl ">Nama Kos</h2>
                     <p class='text-sm text-[#ababab] pb-2'>{lokasi}</p>
                 </div>
-                <div class="grid grid-cols-3 grid-rows-3 gap-1 text-sm max-w-[580px] mt-1">
+
+                <div class="flex flex-row pb-2">
+                    <div class="flex flex-col">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Tipe Bangunan</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/building.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Lantai</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/building.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col ml-[5rem]">
+                        <h4 class="text-lg font-semibold text-[#ababab]">Jumlah Unit</h4>
+                        <div class="flex flex-row items-center">
+                            <img src="https://img.icons8.com/glyph-neue/512/undefined/building.png" class="h-7 mr-2" />
+                            <p>Flat</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-2 grid-rows-3text-sm max-w-[580px] mt-1">
                     <p>Kamar Mandi Dalam</p>
                     <p>Parkiran Motor</p>
                     <p>Ruang Bersama</p>
                     <p>1</p>
                     <p>1</p>
-                    <p>1</p>
-                    <p>1</p>
+                    <a href="">Lihat Lebih Banyak</a>
 
 
                 </div>
                 <div class="absolute mt-[150px] ml-[530px]">
-                    <p class="text-sm font-light -mb-3">Rp</p>
+                    <p class="text-sm font-light -mb-3">dari</p>
                     <div class="flex flex-row">
                         <p class='text-lg font-semibold lg:text-xl pl-5'>500.000
                         <p class=' font-extralight mt-4'>
