--- a/product.html
+++ b/product.html
@@ -190,11 +190,11 @@
                 <div class="pt-2">
                     <h1 class="text-lg font-semibold text-[#ababab] ">Fasilitas</h1>
                     <div class="grid grid-cols-2 grid-rows-3 gap-1 text-sm max-w-[580px] mt-1">
-                        <p class="text-sm ">Kamar Mandi Dalam</p>
-                        <p class="text-sm ">Parkiran Motor</p>
-                        <p class="text-sm ">Ruang Bersama</p>
-                        <p class="text-sm ">1</p>
-                        <p class="text-sm ">1</p>
+                        <p class="text-sm ">Kulkas</p>
+                        <p class="text-sm ">Dispenser</p>
+                        <p class="text-sm ">Ruang Jemur Baju</p>
+                        <p class="text-sm ">Wifi</p>
+                        <p class="text-sm ">Ruang Makan</p>
                         <a href="#">Liat Lebih Banyak</a>
                     </div>
                 </div>
@@ -240,8 +240,7 @@
                     <!--radio buttons end-->
                     <!--slide images start-->
                     <div class="slide1 first1">
-                        <img src="https://images.unsplash.com/photo-1654032390119-639ffb5e53aa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0OHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                        <img src="/src/#241/1" alt="">
                     </div>
                     <div class="slide1">
                         <img src="https://images.unsplash.com/photo-1648737966661-22e0c69d5aa5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw1OHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
