--- a/product.html
+++ b/product.html
@@ -240,11 +240,10 @@
                     <!--radio buttons end-->
                     <!--slide images start-->
                     <div class="slide1 first1">
-                        <img src="/src/#241/1" alt="">
+                        <img src="/src/1.jpg" alt="">
                     </div>
                     <div class="slide1">
-                        <img src="https://images.unsplash.com/photo-1648737966661-22e0c69d5aa5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw1OHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
-                            alt="">
+                        <img src="/src/2.jpg" alt="">
                     </div>
                     <div class="slide1">
                         <img src="https://images.unsplash.com/photo-1638913662295-9630035ef770?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw2M3x8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
